fixed page flickering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-    --cl-bg: #141414;
+    /* --cl-bg: #141414; */
 
 }
 
